# crm

./: .copier-answers.yml  .isort.cfg  .pre-commit-config.yaml  .travis.yml  README.md  contributors.md  oca_dependencies.txt  requirements.txt  test-requirements.txt
base_crm_project/: __manifest__.py
base_newsletter_sendy/: README.rst  __manifest__.py
calendar_resource/: README.rst  __init__.py  __manifest__.py  __openerp__.py
calendar_resources/: __init__.py  __openerp__.py
crm_action/: README.rst  __init__.py  __manifest__.py  __openerp__.py
crm_actions/: README.rst  __openerp__.py
crm_annual_invoiced/: README.rst  __manifest__.py
crm_autoalias/: README.rst  __init__.py  __openerp__.py  hooks.py
crm_automated_activity/: README.rst  __manifest__.py
crm_claim/: README.rst  __init__.py  __manifest__.py
crm_claim_code/: README.rst  __init__.py  __manifest__.py  __openerp__.py  hooks.py
crm_claim_deadline_visible/: README.rst  __init__.py  __openerp__.py
crm_claim_merge/: README.rst  __init__.py  __openerp__.py  crm_claim.py
crm_claim_ref_smartbutton/: README.rst  __init__.py  __openerp__.py
crm_claim_type/: README.md  README.rst  __init__.py  __manifest__.py  __openerp__.py
crm_deduplicate_acl/: README.rst  __manifest__.py  __openerp__.py
crm_deduplicate_by_fuzzy_name/: README.rst  __openerp__.py
crm_deduplicate_by_ref/: README.rst
crm_deduplicate_by_website/: README.rst
crm_deduplicate_filter/: README.rst  __manifest__.py
crm_department/: README.rst  __init__.py  crm.py  (+2 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+3167 files in other folders)
