[project]
name = "odoo-addons-oca-crm"
version = "17.0.20240514.0"
dependencies = [
    "odoo-addon-crm_lead_code>=17.0dev,<17.1dev",
    "odoo-addon-crm_lead_vat>=17.0dev,<17.1dev",
    "odoo-addon-crm_stage_probability>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
